--- a/flexbox.html
+++ b/flexbox.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Box</title>
+
+    <link rel="stylesheet" href="styles/test.css">
 </head>
 <body style="padding-bottom: 1000px;">
     <div style="display: flex;
